create fetch and append each monster name to dom as h2

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
   <body>
     <h1>Monstr Inc.</h1>
     <div id='create-monster'></div>
-      <input type ="text" placeholder="name..."></input>
-      <input type ="text" placeholder="age..."></input>
-      <input type ="text" placeholder="description..."></input>
-      <button>Create</button>
+      <form>
+        <input type ="text" placeholder="name..."></input>
+        <input type ="text" placeholder="age..."></input>
+        <input type ="text" placeholder="description..."></input>
+        <button>Create</button>
+      </form>
     <div id='monster-container'></div>
+    <section id="monstersAPI">
+    </section>
+
     <button id="back"><=</button>
     <button id="forward">=></button>
   </body>
