edit data.map to return whole object
new data.map appends a new child each based on name, age, description

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button>Create</button>
       </form>
     <div id='monster-container'></div>
-    <section id="monstersAPI">
+    <section id= 'monstersAPI'>
     </section>
 
     <button id="back"><=</button>
